--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,12 @@ body {
     width: 100vw;
     font-family: "Montserrat", sans-serif;
     box-sizing: border-box;
+    color: #121212;
+}
+
+a,
+p {
+    color: #121212;
 }
 
 *,
@@ -25,36 +31,60 @@ h4 {
     max-width: 1470px;
     padding-left: 30px;
     padding-right: 30px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 
 /* Header */
 
 .header {
-    margin-top: 30px;
+    display: block;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    z-index: 100;
+    padding: 20px 0px;
+    background-color: #fff;
+}
+
+.header-content {
+    /* padding: 15px 0px; */
     width: 100%;
     display: flex;
     align-items: center;
+    /* justify-content: space-between; */
 }
 
 .header-button {
     cursor: pointer;
+    text-align: center;
     min-width: 150px;
     min-height: 35px;
     padding: 10px;
     background-color: #fff;
-    color: black;
     border: 1px solid black;
     border-radius: 3px;
     font-size: 25px;
     margin-left: auto;
     transition: all 0.3s;
+    text-decoration: none;
 }
 
 .header-button:hover {
     opacity: 1px;
     background-color: black;
     color: #fff;
+}
+
+.logo {
+    display: block;
+    width: 70px;
+    height: 70px;
+    background-image: url('../images/logo.svg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
 
 
@@ -64,24 +94,65 @@ h4 {
     margin-top: 30px;
     display: flex;
     flex-wrap: wrap;
-    gap: 10px;
+    gap: 15px;
 }
 
 .services-list_item {
-    height: 420px;
-    flex-basis: calc((100% - 20px) / 3);
-    outline: 1px solid tomato;
-    background-image: url('../images/image.jpeg');
+    height: auto;
+    flex-basis: calc((100% - 30px) / 3);
+    /* background-image: url('../images/image.jpeg');
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: cover; */
     transition: all 0.3s;
-    background-color: black;
+    /* opacity: 0.5; */
+    border-radius: 2px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .services-list_item:hover {
-    opacity: 0.6;
-    top: 1;
+    opacity: 0.5;
+}
+
+.list-item_image {
+    width: 100%;
+    height: 100%;
+}
+
+.list-item_title {
+    font-size: 27px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+.list-item_link {
+    display: block;
+    height: 400px;
+    text-decoration: none;
+}
+
+
+/* .services-list_text-container {} */
+
+.services-list_text {
+    display: block;
+    font-size: 25px;
+}
+
+
+/* Map */
+
+.map-container {
+    margin-top: 70px;
+}
+
+.google-map {
+    display: block;
+    width: 100%;
+    height: 350px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 
@@ -106,26 +177,10 @@ h4 {
     transition: all 0.2s;
 }
 
-
-/* .footer-list li:hover {
-    color: red;
-} */
-
 .footer-list li+li {
-    margin-top: 10px;
+    margin-top: 20px;
 }
 
-
-/* Map */
-
-.map-container {
-    margin-top: 40px;
-}
-
-.google-map {
-    display: block;
-    width: 100%;
-    height: 350px;
-    margin-left: auto;
-    margin-right: auto;
+.telephone {
+    text-decoration: none;
 }
