--- a/css/main.css
+++ b/css/main.css
@@ -48,15 +48,15 @@ h4 {
     background-color: #fff;
 }
 
-.header-content {
+.header-nav {
     /* padding: 15px 0px; */
     width: 100%;
     display: flex;
     align-items: center;
-    /* justify-content: space-between; */
+    justify-content: space-between;
 }
 
-.header-button {
+.header-nav_button {
     cursor: pointer;
     text-align: center;
     min-width: 150px;
@@ -65,10 +65,15 @@ h4 {
     background-color: #fff;
     border: 1px solid black;
     border-radius: 3px;
-    font-size: 25px;
-    margin-left: auto;
+    font-size: 22px;
+    /* margin-left: auto; */
     transition: all 0.3s;
     text-decoration: none;
+    margin-left: 45px;
+}
+
+.header-nav_link {
+    font-size: 20px;
 }
 
 .header-button:hover {
@@ -159,8 +164,8 @@ h4 {
 /* Footer */
 
 .footer {
-    margin-top: 40px;
-    margin-bottom: 20px;
+    margin-top: 100px;
+    margin-bottom: 40px;
     width: 100%;
     display: flex;
     align-items: center;
